<?xml version="1.0"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<parent>
		<groupId>com.dabi.habitv</groupId>
		<artifactId>application</artifactId>
		<version>4.1.0-SNAPSHOT</version>
	</parent>
	<artifactId>core</artifactId>
	<name>core</name>

	<repositories>
		<repository>
			<id>maven-central</id>
			<name>Maven Central</name>
			<url>https://repo.maven.apache.org/maven2</url>
		</repository>
	</repositories>

	<pluginRepositories>
		<pluginRepository>
			<id>maven-central</id>
			<name>Maven Central</name>
			<url>https://repo.maven.apache.org/maven2</url>
		</pluginRepository>
		<pluginRepository>
			<id>java.net</id>
			<name>Java.net Repository</name>
			<url>https://maven.java.net/content/repositories/public/</url>
		</pluginRepository>
	</pluginRepositories>

	<dependencies>
		<dependency>
			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
			<scope>test</scope>
		</dependency>		
		<dependency>
			<groupId>javax.xml.bind</groupId>
			<artifactId>jaxb-api</artifactId>
		</dependency>
		<dependency>
			<groupId>com.dabi.habitv</groupId>
			<artifactId>framework</artifactId>
			<scope>compile</scope>
		</dependency>
		<dependency>
			<groupId>org.jsoup</groupId>
			<artifactId>jsoup</artifactId>
		</dependency>		
		<dependency>
			<groupId>org.glassfish.jaxb</groupId>
			<artifactId>jaxb-runtime</artifactId>
			<version>4.0.4</version>
		</dependency>
		<dependency>
			<groupId>org.glassfish.jaxb</groupId>
			<artifactId>jaxb-core</artifactId>
			<version>4.0.4</version>
		</dependency>
	</dependencies>
	<build>
		<sourceDirectory>src</sourceDirectory>
		<testSourceDirectory>test</testSourceDirectory>
		<resources>
			<resource>
				<directory>xsd</directory>
			</resource>
			<resource>
				<directory>conf</directory>
			</resource>
		</resources>
		<plugins>
			<plugin>
				<groupId>com.sun.tools.xjc.maven2</groupId>
				<artifactId>maven-jaxb-plugin</artifactId>
				<version>1.1.1</version>
				<executions>
					<execution>
						<id>config</id>
						<goals>
							<goal>generate</goal>
						</goals>
						<configuration>
							<generatePackage>com.dabi.habitv.config.entities</generatePackage>
							<schemaDirectory>xsd</schemaDirectory>
							<generateDirectory>generated</generateDirectory>
							<includeSchemas>
								<includeSchema>config.xsd</includeSchema>
							</includeSchemas>
						</configuration>
					</execution>
					<execution>
						<id>configuration</id>
						<goals>
							<goal>generate</goal>
						</goals>
						<configuration>
							<generatePackage>com.dabi.habitv.configuration.entities</generatePackage>
							<schemaDirectory>xsd</schemaDirectory>
							<generateDirectory>generated</generateDirectory>
							<includeSchemas>
								<includeSchema>configuration.xsd</includeSchema>
							</includeSchemas>
						</configuration>
					</execution>					
					<execution>
						<id>grabconfig</id>
						<goals>
							<goal>generate</goal>
						</goals>
						<configuration>
							<generatePackage>com.dabi.habitv.grabconfig.entities</generatePackage>
							<schemaDirectory>xsd</schemaDirectory>
							<generateDirectory>generated</generateDirectory>
							<includeSchemas>
								<includeSchema>grab-config.xsd</includeSchema>
							</includeSchemas>
						</configuration>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.11.0</version>
				<configuration>
					<release>21</release>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.codehaus.mojo</groupId>
				<artifactId>build-helper-maven-plugin</artifactId>
				<version>3.5.0</version>
				<executions>
					<execution>
						<id>add-source</id>
						<phase>generate-sources</phase>
						<goals>
							<goal>add-source</goal>
						</goals>
						<configuration>
							<sources>
								<source>generated</source>
							</sources>
						</configuration>
					</execution>
				</executions>
			</plugin>
		</plugins>
	</build>
</project>
